Make Sweet Tooth a direct baker menu platform
